# datanarrative-hub

./: .spark-initial-sha  404.html  DEPLOYMENT.md  PRD.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  setup-github-pages.sh  spark.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: config-BVeo62KE.js  config-CF4GBZ68.js  config-D1Mayc_M.js  config-DwBFdvXq.js  content-Bb7fnp_X.js  content-Bxt1R3g6.js  content-C1GGDxiz.js  content-Noq8YMA9.js  content-zUbOEt55.js  index-CyjlU1K_.css
draft pages/draft1/: did_analyse_bouwsector.ipynb  maandcijfers.json  notebook.ipynb
public/: 404.html
src/: App.tsx  index.css  main.tsx  prd.md  test-data-loader.ts  vite-end.d.ts
src/assets/data/: market-segments.csv  sales-metrics.csv  user-engagement.csv
src/components/: ChartContainer.tsx  DataTable.tsx  EmbedChart.tsx  EmbedTable.tsx  GlobalFilterPanel.tsx  MarkdownRenderer.tsx  ReportSearch.tsx  ReportViewer.tsx  TemplateShowcase.tsx
src/content/home/: content.md
src/content/reports/aantal-starters-vlaanderen-2025/: config.json  content.md
src/content/reports/market-segmentation-study/: config.json  content.md
src/content/reports/sales-performance-q1-2024/: config.json  content.md
src/content/reports/user-engagement-metrics/: config.json  content.md
src/content/reports/vergunningen-2025/: config.json  content.md
src/docs/: interactive-features.md
src/hooks/: use-preferences.ts
src/lib/: colors.ts  config.ts  contentManager.ts  data-utils.ts  dataLoader.ts  paths.ts  plotly-config.ts
(+15 files in other folders)
