[project]
name = "datanarrative-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.5",
]
